Pagination for mylistll, "fix" for scrollbars

--- a/public/styles/list_ll.css
+++ b/public/styles/list_ll.css
@@ -45,6 +45,9 @@ th a{
   width:100%;
   overflow-x:scroll;
 }
+::-webkit-scrollbar { 
+    display: none; 
+}
 th a:hover, a:focus{
   color:#fff;
   text-decoration: none;
